--- a/Analysis_Settings.yaml
+++ b/Analysis_Settings.yaml
@@ -1,11 +1,11 @@
 Parameters:
     input_res: 1.615 #raw data resolution
     final_res: 1.615 #resolution used for analysis
-    section_thickness: 50
+    section_thickness: 50 #can alter this if using a different section thickness
     tissue_background: 98 #for removing background, also prevents artifacts during restoration
 
 Analysis:
-    ref_section: 83 #reference section for alignment
+    ref_section: 83 #reference section for alignment - needs to be changed with each brain/run
     second_pass_ref: False #Peform Second Pass Reg
     full_res_DAPI: True
     DAPI_cell_analysis: True # DAPI Analysis option - if selected - will know the DAPI channel and then use different settings
@@ -18,16 +18,16 @@ Analysis:
     validation_jpeg_comp: 100    #100% quality default
 
 Atlas:
-    atlas_dir: "C:/Users/Alejandro/Desktop/BrainJ/ABA_CCF_25_2017/"
+    atlas_dir: "C:/Users/Alejandro/Desktop/BrainJ/ABA_CCF_25_2017/" #should be customized to your local file structure
     atlas_res:    (25,25,25)    #atlas resolution
 
 Elastix:
-    location: "C:/Program Files/elastix-5_0_1/"
+    location: "C:/Program Files/elastix-5_0_1/" #should be customized to your local file structure
 
 Channel_1:
     cell_analysis: True #    True / False - False to disable detection on this channel
     measure:    True    # T/F - Measure intensity of other channels with these cells
-    rest_model_path:    "C:/Users/Alejandro/Documents/GitHub/BrainJ-Python/BrainJ/Models/2023_07_cfos_2D_1_6um_widefield_256x256_resnet34_V3_1.h5"    #Path to restoration model
+    rest_model_path:    "C:/Users/Alejandro/Documents/GitHub/BrainJ-Python/BrainJ/Models/2023_07_cfos_2D_1_6um_widefield_256x256_resnet34_V3_1.h5"    #Path to restoration model, should be customized to your local file structure
     rest_type: ("tf", "resnet34")    #Type and backbone type if using tf models
     seg_model: ('StarDist2D', '2D_versatile_fluo') # currently using stardist (model, network) e.g. ("StarDist2D", '2D_versatile_fluo')
     seg_thresh: 0.05
@@ -42,7 +42,7 @@ Channel_1:
 Channel_2:
     cell_analysis: True #    True / False - False to disable detection on this channel
     measure:    True    # T/F - Measure intensity of other channels with these cells
-    rest_model_path:    "C:/Users/Alejandro/Documents/GitHub/BrainJ-Python/BrainJ/Models/2023_02_Trap2_1_6um_widefield_resnet34_V2_2023_03_backbone_50epochs.hdf5"    #Path to restoration model
+    rest_model_path:    "C:/Users/Alejandro/Documents/GitHub/BrainJ-Python/BrainJ/Models/2023_02_Trap2_1_6um_widefield_resnet34_V2_2023_03_backbone_50epochs.hdf5"    #Path to restoration model, should be customized to your local file structure
     rest_type: ("tf", "resnet34")    #Type and backbone type if using tf models
     seg_model: ('StarDist2D', '2D_versatile_fluo') # currently using stardist (model, network) e.g. ("StarDist2D", '2D_versatile_fluo')
     seg_thresh: 0.05
@@ -57,7 +57,7 @@ Channel_2:
 Channel_3:
     cell_analysis: True #    True / False - False to disable detection on this channel
     measure:    False    # T/F - Measure intensity of other channels with these cells
-    rest_model_path:    "C:/Users/Alejandro/Documents/GitHub/BrainJ-Python/BrainJ/Models/488_Enhanced_Care_2D"    #Path to restoration model
+    rest_model_path:    "C:/Users/Alejandro/Documents/GitHub/BrainJ-Python/BrainJ/Models/488_Enhanced_Care_2D"    #Path to restoration model, should be customized to your local file structure
     rest_type: ("care", 0)    #Type and backbone type if using tf models. If "care", follow by a threshold to remove low intensities and potential artifacts.
     seg_model: ('StarDist2D', '2D_versatile_fluo') # currently using stardist (model, network) e.g. ("StarDist2D", '2D_versatile_fluo')
     normalize: (20,99.8)
@@ -71,7 +71,7 @@ Channel_3:
 Channel_4:
     cell_analysis: True #    True / False - False to disable detection on this channel
     measure:    False    # T/F - Measure intensity of other channels with these cells
-    rest_model_path:    "C:/Users/Alejandro/Documents/GitHub/BrainJ-Python/BrainJ/Models/DAPI_Enhanced_Care_2D_V2"    #Path to restoration model
+    rest_model_path:    "C:/Users/Alejandro/Documents/GitHub/BrainJ-Python/BrainJ/Models/DAPI_Enhanced_Care_2D_V2"    #Path to restoration model, should be customized to your local file structure
     rest_type: ("care", 0)    #Type and backbone type if using tf models. If "care", follow by a threshold to remove low intensities and potential artifacts.
     seg_model: ('StarDist2D', '2D_versatile_fluo') # currently using stardist (model, network) e.g. ("StarDist2D", '2D_versatile_fluo')
     normalize: (20,99.8)
